# langchain

./: .gitignore  LICENSE  README.md  check_modules.py  hello.py  index.html  install.sh  main.py  package.json  pyproject.toml
business-analytics-pro/: Dockerfile  docker-compose.yml  package-lock.json  package.json  server.js  setup.py
business-analytics-pro/config/: tenants.json
business-analytics-pro/langchain_project/: main.py
business-analytics-pro/langchain_project/analytics/: __init__.py  predictive_analysis.py
business-analytics-pro/langchain_project/components/: chat.py  email_button.py  file_importer.py
business-analytics-pro/langchain_project/data_connector/: __init__.py  connector.py
business-analytics-pro/requirements/: prod.txt
business-analytics-pro/secrets/: jwt_secret.key
docs/: README.md  admin_guide.md  integration_guide.md  user_manual.md
langchain_project/: main.py
langchain_project/analytics/: metrics.py
langchain_project/components/: charts.py  sidebar.py
langchain_project/config/: constants.py
langchain_project/models/: openai_model.py
langchain_project/pages/: operacional.py
langchain_project/utils/: alerts.py  auth.py  financial_data.py
pages/: comercial.py  dashboard.py  financeiro.py  operacional.py
requirements/: dev.txt  prod.txt
src/: load_sample_data.py  sample_data.py  vector_store.py
src/analytics/: market.py  metrics.py
src/components/: charts.py  chat.py  email_button.py  file_importer.py
src/data/: external.py
src/models/: openai_model.py
src/utils/: alerts.py  auth.py  email_sender.py  file_processor.py  financial_data.py
(+12 files in other folders)
