[project]
name = "project-langchain"
version = "0.1.0"
description = "Projeto de análise financeira com IA"
dependencies = [
    "streamlit",
    "openai>=1.0.0",
    "python-dotenv",
    "python-pptx",
    "langchain",
    "langchain-openai",
    "pandas",
    "plotly",
    "numpy",
    "openpyxl",
    "fastparquet",
    "secure-smtplib",
    "reportlab",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"